# agglovar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  tox.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  definitions.rst  index.rst
src/agglovar/: __init__.py  fa.py  io.py  schema.py  seqmatch.py
src/agglovar/align/: __init__.py  score.py
src/agglovar/bed/: col.py  intersect.py  join.py
src/agglovar/dev/: imports.py
src/agglovar/expr/: __init__.py  variant.py
src/agglovar/intersect/: __init__.py  intersect_pair.py
src/agglovar/intersect/config/: __init__.py  lexer.py  params.py  parser.py
src/agglovar/join/: __init__.py  multipair.py  pair.py  pairwise.py  util.py
src/agglovar/join/config/: __init__.py  parser.py  stage.py  strategy.py
src/agglovar/join/om/: __init__.py  executor_base.py  executor_nr.py
src/agglovar/kmer/: __init__.py  fig.py  plot.py  util.py
src/agglovar/merge/: base.py  cumulative.py
src/agglovar/merge/config/: parser.py  stage.py
src/agglovar/meta/: decorators.py  descriptors.py
src/agglovar/pairwise/: base.py  dedup.py  overlap.py  sequential.py  weights.py
src/agglovar/pairwise/overlap/: _const.py  _overlap.py  _stage.py
src/agglovar/util/: __init__.py  lazy.py  str.py  var.py
src/agglovar/vcf/: __init__.py  _vcf_const.py  _vcf_header.py  _vcf_read.py  _vcf_write.py
tests/assets/variant_tables/: load.py  variant_tables_del.csv  variant_tables_ins.csv  variant_tables_snv.csv
tests/bed/: _make_synthetic1.py  conftest.py  datasets.py  oracle.py  test_col.py  test_intersect_as_bool.py  test_intersect_as_proportion.py  test_melt_depth.py  test_merge_depth.py  test_pairwise_join.py
tests/join/: resources.py
tests/join/pair/: test_targeted.py
tests/join/pairwise/: test_targeted.py
tests/merge/: test_source_meta.py
