[project]
name = "agglovar"
version = "0.0.1a1"
description = "Toolkit for fast genomic variant transformations and intersects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edlib>=1.3.9.post1",
    "numpy>=2.3.0",
    "ply>=3.11",
    "polars>=1.30.0",
]
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
