[project]
name = "agglovar"
version = "0.0.1a1"
description = "Toolkit for fast genomic variant transformations and intersects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edlib>=1.3.9.post1",
    "numpy>=2.3.0",
    "ply>=3.11",
    "polars>=1.30.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.3",
]
all = [
    "agglovar[plot]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
